test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-shared-from-oknil-shared.good
init-field-arg-nonnil-shared-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-shared-from-oknil-shared.chpl:10: error: cannot create a non-nilable shared variable from a nilable class instance
  init-field-arg-nonnil-shared-from-oknil-shared.chpl:14: called as MyRecord.init(rhs: shared MyClass?)
